stylesheet.less
@import "@{templateCommon}/basekit-bootstrap.less";

body {
    background-color: @color-swatch2;
    background-image: image('/images/section-bg.png');
    margin: 0;
    padding: 0;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===============================
   CUSTOM CSS
   =============================== */

.canvas {
    background-color: @color-swatch1;
    max-width: 1300px;
    width: 90%;
    margin: 40px auto;
    padding: 0px;
    box-shadow: 0 0 100px rgba(197,197,197,0.1);
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}

.main {
    padding: 2em 0;
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}

/* DEFAULT PAGE TYPE */

.bk-pt-default header.bk-header {
    border-bottom: 1px solid@color-swatch2
}

/* PAGE INTRO */

.page-title {
    padding: 0.4em 0;
    background-color: lighten(@color-swatch5,25%);
}

.page-title h4 {
    padding-bottom: 0;
    color: lighten(@color-swatch4,40%);
}

/* ===============================
   HEADER
   =============================== */

header.bk-header {
    padding: 20px 0;
    background-color: @color-swatch7;
}

.companyheader {
    display: block;
    float: left;
    margin-top: 8px;
}

/* COMPANY NAME */

.widget.companyname {
    display: block;
    float: left;
}

/* LOGO */

.widget.logo {
    display: block;
    float: left;
    margin-right: 8px;
    margin-top: 3px;
}

/* ===============================
   FOOTER
   =============================== */

footer.bk-footer {
    border-top: 1px solid lighten(@color-swatch5,20%);
    padding: 1.8em 0 1.2em;
    color: @color-swatch1;
}

footer.bk-footer h1,
footer.bk-footer h2,
footer.bk-footer h3,
footer.bk-footer h4 {
    padding-bottom: 30px;
}

footer.bk-footer .columns-two-right {
    text-align: right;
}

/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.widget.extendednavigation {
    float: right;
    position: relative;
    max-width: 800px;
    margin: 0;
    padding: 5px 0;
}

.widget.extendednavigation ul {
    float: left;
    margin: 0;
    padding: 0;
}

.widget.extendednavigation ul li {
    float: left;
    display: block;
}

.widget.extendednavigation ul li:hover {
    background-color: lighten(@color-swatch5,40%);
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}

.widget.extendednavigation ul li a,
.widget.extendednavigation ul li.folder .text {
    display: block;
    padding: 8px 32px;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;

}

.widget.extendednavigation ul li a:hover,
.widget.extendednavigation ul li.folder .text:hover {
    color: @font-swatch6-color-hover;
    text-decoration: none;
}

/* FOLDER */

.widget.extendednavigation ul li.folder {
    background-image: image('/images/arrow-down.png');
    background-position: right 20px;
    background-repeat: no-repeat;
    cursor: pointer;
    &:after {
        border: 0;
    }
}

.widget.extendednavigation ul li.folder:hover {
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
}

.widget.extendednavigation ul li.folder .text:hover {
    color: @color-swatch3;
}

/* DROPDOWN MENU */

.widget.extendednavigation li > ul {
    display: none
}

.widget.extendednavigation li:hover > ul {
    display: block;
    position: absolute;
    background-color: lighten(@color-swatch5,40%);
    z-index: 500;
    padding: 0;
    margin: 0;
    -webkit-border-radius: 0 4px 4px 4px;
    -moz-border-radius: 0 4px 4px 4px;
    border-radius: 0 4px 4px 4px;
}

.widget.extendednavigation li:hover > ul li {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
}

.widget.extendednavigation li:hover > ul li:hover {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}

.widget.extendednavigation li:hover > ul li:first-child:hover {
    -webkit-border-radius: 0 4px 0 0;
    -moz-border-radius: 0 4px 0 0;
    border-radius: 0 4px 0 0;
}

.widget.extendednavigation li:hover > ul li:last-child:hover {
    -webkit-border-radius: 0 0 4px 4px;
    -moz-border-radius: 0 0 4px 4px;
    border-radius: 0 0 4px 4px;
}

.widget.extendednavigation li:hover > ul li a {
    padding: 0
}

/* EXTENDED NAVIGATION - INSIDE ZONE */

.main .widget.extendednavigation {
    max-width: 100%;
    width: 100%;
    float: none;
}

.main .widget.extendednavigation:before,
.main .widget.extendednavigation:after {
    content: " ";
    display: table;
}

.main .widget.extendednavigation:after {
    clear: both
}

.main .widget.extendednavigation {
    *zoom: 1
}

/* ===============================
   FEATURE
   =============================== */

.widget.feature {
    width: 100.04%;
}

.widget.feature .feature-bgimg {
    height: 450px;
    background-color: lighten(@color-swatch2,4%);
}


.widget.feature .content {
    height: 450px;
    text-align: left;
}

/* FEATURE TITLE */

.widget.feature h2 {
    font-family: @font-swatch8-font-family;
    font-size: @font-swatch8-font-size;
    font-weight: @font-swatch8-font-weight;
    line-height: @font-swatch8-line-height;
    color: @font-swatch8-color;
    letter-spacing: @font-swatch8-letter-spacing;
}

/* FEATURE STRAPLINE */

.widget.feature h3 {
    font-family: @font-swatch9-font-family;
    font-size: @font-swatch9-font-size;
    font-weight: @font-swatch9-font-weight;
    line-height: @font-swatch9-line-height;
    color: @font-swatch9-color;
    letter-spacing: @font-swatch9-letter-spacing;
    max-width: 600px;
}
/* ... */

